# cpat

./: AUTHORS  ChangeLog  README  acinclude.m4  bootstrap  configure.ac  configure.in
doc/: Makefile.am  cpat.6
src/: Makefile.am  bakersdozen.c  canfield.c  common.c  common.h  cpat.c  cpat.h  document.c  document.h  fortythieves.c  freecell.c  highscores.c  highscores.h  klondike.c  penguin.c  scorpion.c  spider.c  strategy.c  yukon.c
